# onvolunteers-notebook

./: .gitignore  Dockerfile.inspector  GOOGLE_SETUP.md  Process_OnVolunteers_Reports_Test_Recreate.json  README.md  cleanup.sh  google_drive_reporting.ipynb  ov-website-run-report.py  package-lock.json  requirements.txt
.github/workflows/: lint-notebook.yml
.mcp/: config.json  config.json.sample
google-drive-integration/: google_drive_reporting.ipynb
scripts/: README.md  analyze_report.py  ov.env.sample  ov_reports_list.py  pyproject.toml  requirements.txt  sync_requirements.sh
scripts/ov_process_gmail_reports/: README.md  activate_and_run.sh  analyze_report.py  db_setup.py  gmail_gdrive.env.sample  load_db.py  ov_identify_report.py  ov_process_gmail_reports.py  pyproject.toml  query_db.py  requirements.txt
scripts/ov_reports_list/: README.md  activate_and_run.sh  main.py  ov.env.sample  ov_reports_list.py  pyproject.toml
terraform/: main.tf  outputs.tf  variables.tf
