[project]
name = "ov-process-gmail-reports"
version = "0.1.0"
description = "OnVolunteers Process Reports from Gmail."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.183.0",
    "google-auth-oauthlib>=1.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
]
